--- a/public/css/index.css
+++ b/public/css/index.css
@@ -102,9 +102,10 @@
     height: 195px;
     margin-top: 18px;
 }
+
 .transparentBg{
     width: 100%;
-    height: 600px;
+    height: 1100px;
     background: rgba(255,255,255,0.7) none repeat scroll 0 0 !important;
 }
 .menuLeft{
@@ -113,9 +114,7 @@
 }
 .menuLeft .firstMenu{
     width: 60%;
-    height: 200px;
     float: left;
-    background: red;
 }
 .menuLeft .firstMenu .title1{
     width: 100%;
@@ -123,36 +122,125 @@
     line-height: 30px;
     text-align: center;
     background: #ec2d00;
+    font-size: 16px;
+    color: #fff;
+}
+.menuLeft .firstMenu .content{
+    text-align: center;
+    font-size: 16px;
+}
+.menuLeft .firstMenu .content ul li a{
+    height: 30px;
+    line-height: 30px;
+    color: #000;
+}
+.menuLeft .firstMenu .content ul li:hover{
+    background: #f45632;
+    color: #fff;
+    -webkit-transition: all 0.8s ease-out;
+    -moz-transition: all 0.8s ease-out;
+    -o-transition: all 0.8s ease-out;
+    transition: all 0.8s ease-out;
+}
+.menuLeft .firstMenu .content ul li:hover a{
+    color: #fff;
+}
+.menuLeft .firstMenu .content ul li:hover a i{
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
 }
 .menuLeft .lastMent{
     width: 40%;
-    height: 200px;
+    height: 450px;
     float: left;
-    background: #f3cec6;
+    background: rgba(255, 0, 0, 0.2) none repeat scroll 0 0 !important;
+    filter: Alpha(opacity=20);
+    background: #fff;
 }
+.menuLeft .lastMent ul{
+    padding-top: 30px;
+}
+.menuLeft .lastMent ul li a{
+    color: #000;
+
+}
+.menuLeft .lastMent ul li{
+    height: 24px;
+    line-height: 24px;
+    font-size: 14px;
+    padding-left: 12px;
+    -webkit-transition: all 0.8s ease-out;
+    -moz-transition: all 0.8s ease-out;
+    -o-transition: all 0.8s ease-out;
+    transition: all 0.8s ease-out;
+}
+.menuLeft .lastMent ul li:hover{
+    background: #f45632;
+}
+.menuLeft .lastMent ul li:hover a{
+    color: #fff;
+}
+
 .taoljNews{
     width: 95%;
-    height: 200px;
+    margin-top: 20px;
     background: #fff;
-    clear: both;
 }
 .taoljNews .title{
     width: 100%;
     height: 40px;
     text-align: left;
     line-height: 40px;
+    font-size: 16px;
+    color: red;
+    font-family: 黑体;
     border: 1px solid #cbcbcb;
+}
+.taoljNews .title i,.taoljNews .title span{
+    padding-left: 20px;
 }
 .taoljNews .content{
     width: 100%;
-    height: 300px;
     border: 1px solid #cbcbcb;
     border-top: 0px;
+}
+.taoljNews .content ul li{
+    height: 35px;
+    line-height: 35px;
+    font-size: 16px;
+    padding-left: 20px;
+    position: relative;
+}
+.taoljNews .content ul li span{
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: #ee5018;
+    line-height: 29px;
+    margin-top: 5px;
+    text-align: center;
+    color: #fff;
+}
+.taoljNews .content ul li a{
+    display: block;
+    color: #b6b6b6;
+    position: absolute;
+    top: 0px;
+    left: 60px;
+}
+.taoljNews .content ul .top a{
+    color: #ee5018;
 }
 
 .menuRight{
     width: 69%;
     float: left;
+}
+.menuRight .pages .column{
+    font-size: 12px;
 }
 .postNews{
     width: 100%;
@@ -171,6 +259,7 @@
 .postNews .content{
     width: 100%;
     height: 120px;
+    font-size: 14px;
     border: 1px solid #cfcfcf;
     border-top-color: transparent;
     -webkit-transition:all 0.5s ease;
